plugins {
    id 'java'
    id 'com.gradleup.shadow' version '8.3.3'
    id 'org.jetbrains.kotlin.jvm' version '2.0.21'
}

group = 'com.al3x'
version = '1.0'

repositories {
    mavenCentral()
    maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
    maven { url 'https://oss.sonatype.org/content/groups/public/' }
    maven { url 'https://repo.onarandombox.com/content/groups/public/' }
    maven { url 'https://maven.citizensnpcs.co/repo' }
    maven { url 'https://repo.infernalsuite.com/repository/maven-snapshots/' }
    maven { url 'https://repo.rapture.pw/repository/maven-releases/' }
}

dependencies {
    compileOnly 'org.spigotmc:spigot-api:1.21.1-R0.1-SNAPSHOT'
    compileOnly('net.citizensnpcs:citizens-main:2.0.35-SNAPSHOT') {
        transitive = false
    }
    implementation "com.google.code.gson:gson:2.11.0"
    compileOnly 'com.infernalsuite.aswm:api:3.0.0-SNAPSHOT'
    implementation 'com.infernalsuite.aswm:loaders:3.0.0-SNAPSHOT'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    implementation 'fr.mrmicky:fastboard:2.1.3'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

String outputLocation = 'build/libs'
//You can put this in your local gradle.properties file
if (project.hasProperty('outputLocation')) {
    outputLocation = project.outputLocation
}

tasks.register('copyJarToLocation', Copy) {
    from shadowJar
    into outputLocation
}

kotlin {
    jvmToolchain(21)
}